minilisp/parser.output
Grammar

    0 $accept: Program $end

    1 Program: Program Naredba
    2        | Naredba

    3 Naredba: Lista
    4        | '(' car_token '\'' Lista ')'

    5 Lista: '(' NizElemenata ')'

    6 NizElemenata: NizElemenata Elem
    7             | Elem

    8 Elem: num_token
    9     | '+'
   10     | '*'
   11     | Lista


Terminals, with rules where they appear

$end (0) 0
'\'' (39) 4
'(' (40) 4 5
')' (41) 4 5
'*' (42) 10
'+' (43) 9
error (256)
num_token (258) 8
car_token (259) 4


Nonterminals, with rules where they appear

$accept (10)
    on left: 0
Program (11)
    on left: 1 2, on right: 0 1
Naredba (12)
    on left: 3 4, on right: 1 2
Lista (13)
    on left: 5, on right: 3 4 11
NizElemenata (14)
    on left: 6 7, on right: 5 6
Elem (15)
    on left: 8 9 10 11, on right: 6 7


State 0

    0 $accept: . Program $end

    '('  shift, and go to state 1

    Program  go to state 2
    Naredba  go to state 3
    Lista    go to state 4


State 1

    4 Naredba: '(' . car_token '\'' Lista ')'
    5 Lista: '(' . NizElemenata ')'

    num_token  shift, and go to state 5
    car_token  shift, and go to state 6
    '('        shift, and go to state 7
    '+'        shift, and go to state 8
    '*'        shift, and go to state 9

    Lista         go to state 10
    NizElemenata  go to state 11
    Elem          go to state 12


State 2

    0 $accept: Program . $end
    1 Program: Program . Naredba

    $end  shift, and go to state 13
    '('   shift, and go to state 1

    Naredba  go to state 14
    Lista    go to state 4


State 3

    2 Program: Naredba .

    $default  reduce using rule 2 (Program)


State 4

    3 Naredba: Lista .

    $default  reduce using rule 3 (Naredba)


State 5

    8 Elem: num_token .

    $default  reduce using rule 8 (Elem)


State 6

    4 Naredba: '(' car_token . '\'' Lista ')'

    '\''  shift, and go to state 15


State 7

    5 Lista: '(' . NizElemenata ')'

    num_token  shift, and go to state 5
    '('        shift, and go to state 7
    '+'        shift, and go to state 8
    '*'        shift, and go to state 9

    Lista         go to state 10
    NizElemenata  go to state 11
    Elem          go to state 12


State 8

    9 Elem: '+' .

    $default  reduce using rule 9 (Elem)


State 9

   10 Elem: '*' .

    $default  reduce using rule 10 (Elem)


State 10

   11 Elem: Lista .

    $default  reduce using rule 11 (Elem)


State 11

    5 Lista: '(' NizElemenata . ')'
    6 NizElemenata: NizElemenata . Elem

    num_token  shift, and go to state 5
    '('        shift, and go to state 7
    ')'        shift, and go to state 16
    '+'        shift, and go to state 8
    '*'        shift, and go to state 9

    Lista  go to state 10
    Elem   go to state 17


State 12

    7 NizElemenata: Elem .

    $default  reduce using rule 7 (NizElemenata)


State 13

    0 $accept: Program $end .

    $default  accept


State 14

    1 Program: Program Naredba .

    $default  reduce using rule 1 (Program)


State 15

    4 Naredba: '(' car_token '\'' . Lista ')'

    '('  shift, and go to state 7

    Lista  go to state 18


State 16

    5 Lista: '(' NizElemenata ')' .

    $default  reduce using rule 5 (Lista)


State 17

    6 NizElemenata: NizElemenata Elem .

    $default  reduce using rule 6 (NizElemenata)


State 18

    4 Naredba: '(' car_token '\'' Lista . ')'

    ')'  shift, and go to state 19


State 19

    4 Naredba: '(' car_token '\'' Lista ')' .

    $default  reduce using rule 4 (Naredba)
